=============================================================
Version 3.0.3
=============================================================

    - Bugfix: Switching from boolean to integer for checkbox type data

=============================================================
Version 3.0.2
=============================================================

    - Feature: Adding refunded status to order filters
    - Feature: Add drop-down list for number of items per page for products & orders
    - Feature: Protocol change to https for API calls
    - Feature: Implementation of the matching of shipping methods in carrier matching
    - Feature: Managing delivery_date and custom_carrier parameters for sending action
    - Feature: Check and complete an order not imported if it is canceled or refunded
    - Bugfix: Optimizing the display of errors in the order screen
    - Bugfix: [action] Correction of the dates of creation and update of the actions
    - Bugfix: [action] Deleting the shipping_date parameter in the action check request
    - Bugfix: Deleting the indefinite index user_id in the connector
    - Bugfix: Language code recovery for the Lengow iframe
    - Bugfix: Lengow multi-tab installation problem in the Prestashop menu

=============================================================
Version 3.0.1
=============================================================

    - Feature: Complete refactoring of the installation and update processes
    - Bugfix: Add indexes to database to speed up the display of product and order grids
    - Bugfix: [export] Migration from global product selection to a multi-shop selection
    - Bugfix: [export] Retrieval of all export settings for older versions
	- Bugfix: [export] Recovering the right shop name for older versions
	- Bugfix: [export] Change image_product attribute for legacy fields
	- Bugfix: [action] Removing of action errors when orders are completed

=============================================================